tailwind prefix added to all clases

--- a/src/index.css
+++ b/src/index.css
@@ -1,27 +1,27 @@
-@import "tailwindcss";
+@import "tailwindcss" prefix(tw);
 
 @plugin "tailwindcss-animate";
 
 @layer base {
   :root {
-    --chart-1: 183 100% 29%;
-    --chart-2: 173 58% 39%;
-    --chart-3: 197 37% 24%;
-    --chart-4: 43 74% 66%;
-    --chart-5: 27 87% 67%;
+    --tw-chart-1: 183 100% 29%;
+    --tw-chart-2: 173 58% 39%;
+    --tw-chart-3: 197 37% 24%;
+    --tw-chart-4: 43 74% 66%;
+    --tw-chart-5: 27 87% 67%;
   }
 
   .dark {
-    --chart-1: 220 70% 50%;
-    --chart-2: 160 60% 45%;
-    --chart-3: 30 80% 55%;
-    --chart-4: 280 65% 60%;
-    --chart-5: 340 75% 55%;
+    --tw-chart-1: 220 70% 50%;
+    --tw-chart-2: 160 60% 45%;
+    --tw-chart-3: 30 80% 55%;
+    --tw-chart-4: 280 65% 60%;
+    --tw-chart-5: 340 75% 55%;
   }
 }
 
 @theme {
-  --color-swell: #008a93;
+  --tw-color-swell: #008a93;
 }
 
 .no-scrollbar {
