--- a/src/index.css
+++ b/src/index.css
@@ -10,14 +10,6 @@
     --tw-chart-4: 43 74% 66%;
     --tw-chart-5: 27 87% 67%;
   }
-
-  .dark {
-    --tw-chart-1: 220 70% 50%;
-    --tw-chart-2: 160 60% 45%;
-    --tw-chart-3: 30 80% 55%;
-    --tw-chart-4: 280 65% 60%;
-    --tw-chart-5: 340 75% 55%;
-  }
 }
 
 @theme {
@@ -27,4 +19,16 @@
 .no-scrollbar {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
+}
+
+.display-flex {
+  display: flex;
+}
+
+.text-color-white {
+  color: white;
+}
+
+.margin-none {
+  margin: 0;
 }
