weatehr report updated

--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,9 @@
 .margin-bottom-none {
   margin-bottom: 0;
 }
+.margin-bottom-2 {
+  margin-bottom: 0.5rem;
+}
 
 .recharts-cartesian-axis-tick-line {
   opacity: 0.5;
