--- a/src/index.css
+++ b/src/index.css
@@ -93,3 +93,26 @@
 .tooltip-paragraph-small {
   font-size: 0.75rem;
 }
+
+.underline-anim {
+  position: relative;
+  text-decoration: none;
+}
+
+.underline-anim::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  bottom: -2px;
+  right: 0;
+  background-color: currentColor;
+  transform: scaleX(0);
+  transform-origin: right;
+  transition: transform 0.3s var(--ease-in-out);
+}
+
+.underline-anim:hover::after {
+  transform: scaleX(1);
+  transform-origin: left;
+}
